syntax = "proto3";

package Todos;

service Todos {
    rpc GetTodoItems (Empty) returns (GetTodoItemsResponse) {}
}

message Empty {}

message Todo {
    string Id = 1;
    string Name = 2;
    bool IsComplete = 3;
}

message GetTodoItemsResponse {
   repeated Todo todos = 1;
}